Check new msrw setup

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -122,5 +122,14 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.msrv }}
+      # For library crates - run cargo check targeting the library itself and possible binaries
+      # and examples. For binary crates and workspace setups - check binaries and examples only.
+      # If you use a workspace, you might want to tailor this job to your needs.
       - name: cargo +${{ matrix.msrv }} check
-        run: cargo check
+        run: |
+          if (cargo read-manifest | jq .targets[].kind[0] | grep \"lib\") > /dev/null
+          then
+            cargo check --all-features --bins --examples --lib
+          else
+            cargo check --all-features --bins --examples --workspace
+          fi
