--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,12 @@ default = []
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
 rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-platform-verifier"]
 binaries = ["dep:clap", "tokio/macros"]
+bb8 = ["dep:bb8"]
 ent = []
 
 [dependencies]
 async-trait = "0.1.77"
+bb8 = { version = "0.9.0", optional = true }
 clap = { version = "4.4.10", optional = true }
 chrono = { version = "0.4", features = [
   "serde",
