--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 
 [features]
 default = []
+sysinfo = ["dep:sysinfo"]
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
 rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-platform-verifier"]
 binaries = ["dep:clap", "tokio/macros"]
@@ -51,6 +52,9 @@ rustls-platform-verifier = { version = "0.6", optional = true }
 tracing = "0.1"
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
+sysinfo = { version = "0.37.2", default-features = false, features = [
+  "system",
+], optional = true }
 
 [dev-dependencies]
 dockerfile-parser = "0.9.0"
