--- a/.github/workflows/tls.yml
+++ b/.github/workflows/tls.yml
@@ -34,4 +34,4 @@ jobs:
         env:
           FAKTORY_URL_SECURE: tcp://:uredinales@localhost:17419
           FAKTORY_URL: tcp://:uredinales@localhost:7419
-        run: cargo test --locked --features native_tls,rustls --test tls
+        run: cargo test --locked --features worker,native_tls,rustls --test tls
