--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 sysinfo = ["dep:sysinfo"]
+worker = ["dep:fnv", "dep:hostname"]
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
 rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-platform-verifier"]
 binaries = ["dep:clap", "tokio/macros"]
@@ -29,8 +30,8 @@ chrono = { version = "0.4", features = [
   "clock",
 ], default-features = false }
 derive_builder = "0.20"
-fnv = "1.0.5"
-hostname = "0.4"
+fnv = { version = "1.0.5", optional = true }
+hostname = { version = "0.4", optional = true }
 pin-project = { version = "1.1.4", optional = true }
 rand = "0.9"
 serde = "1.0"
@@ -91,7 +92,17 @@ serde = "1.0.186"
 [[bin]]
 name = "loadtest"
 path = "src/bin/loadtest.rs"
-required-features = ["binaries"]
+required-features = ["binaries", "worker"]
+
+[[example]]
+name = "run"
+path = "examples/run.rs"
+required-features = ["worker"]
+
+[[example]]
+name = "run_to_completion"
+path = "examples/run_to_completion.rs"
+required-features = ["worker"]
 
 [package.metadata.docs.rs]
 all-features = true
